python/testData/quickFixes/PyAddImportQuickFixTest/orderingOfNamesInFromImportEnd/main.py
from lib import a, b

print(a, b, <error descr="Unresolved reference 'c'"><caret>c</error>)
